<resources>
    <string name="app_name">CouponCourier</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_search_category">Popular Categories</string>
    <string name="search_hint">search by brand, category, etc.</string>
    <string name="coupon_submission">Coupon Submission</string>

    <string name="brand_dropdown">Brand<font color="#FF0000">*</font></string>
    <string name="category_dropdown">Category<font color="#FF0000">*</font></string>
    <string name="type_dropdown">Type<font color="#FF0000">*</font></string>
    <string name="type_deal">Deal<font color="#FF0000">*</font></string>
    <string name="code_submission">Code<font color="#FF0000">*</font></string>
    <string name="exp_date">Exp. Date<font color="#FF0000">*</font></string>
    <string name="attribute_checkbox">Attributes<font color="#FF0000">*</font></string>
    <string name="inStoreCheckbox">In-Store</string>
    <string name="onlineCheckbox">Online</string>
    <string name="militaryIdCheckbox">Military</string>
    <string name="stackableCheckbox">Stackable</string>
    <string name="productInput">Product</string>
    <string name="addInfoInput">Additional Info</string>
    <string name="upload_text">UPLOAD</string>
    <string name="travel">Travel</string>
    <string name="home_amp_kitchen"><![CDATA[Home & Kitchen]]></string>
    <string name="toys">Toys</string>
    <string name="personal_care">Personal Care</string>
    <string name="food">Food</string>
    <string name="groceries">Groceries</string>
    <string name="shoes">Shoes</string>
    <string name="electronics">Electronics</string>
    <string name="clothing">Clothing</string>
    <string name="all">All</string>
    <string name="filter_description">filter deals</string>
    <string name="search_filters">Search Filters</string>
    <string name="bxgx">BXGX</string>
    <string name="off_absolute">$OFF</string>
    <string name="freebie">Freebie</string>
    <string name="off_relative">%OFF</string>
    <string name="end_of_results">(End of Results)</string>

    <string-array name="brands">
        <item>Nike</item>
        <item>Adidas</item>
        <item>H&amp;M</item>
        <item>Patagonia</item>
    </string-array>

    <string-array name="categories">
        <item>Clothing</item>
        <item>Footwear</item>
    </string-array>

    <string-array name="types">
        <item>10% off</item>
        <item>BOGO</item>
        <item>Free Item</item>
    </string-array>
</resources>