<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".UploadFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="620dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:gravity="center"
                android:text="@string/coupon_submission"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/brand_dropdown"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/brandSpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/category_dropdown"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/categorySpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/type_dropdown"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/typeSpinner"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/code_submission"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/codeInput"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/exp_date"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/expDatePicker"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:paddingRight="30dp"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/attribute_checkbox"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/inStoreCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:tint="@color/black"
                        android:src="@drawable/ic_baseline_storefront_24"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/inStoreCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:tint="@color/black"
                        android:src="@drawable/online"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/inStoreCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:tint="@color/black"
                        android:src="@drawable/ic_baseline_military_tech_24"/>
                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/inStoreCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:tint="@color/black"
                        android:src="@drawable/stackable"/>
                </TableRow>

                <TableRow>
                    <CheckBox
                        android:id="@+id/inStoreCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/inStoreCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                    <CheckBox
                        android:id="@+id/onlineCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/onlineCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <CheckBox
                        android:id="@+id/militaryIdCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/militaryIdCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <CheckBox
                        android:id="@+id/stackedCheckbox"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:text="@string/stackableCheckbox"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginVertical="20dp"
                        android:layout_weight="1"
                        android:paddingLeft="30dp"
                        android:text="@string/addInfoInput"
                        android:textColor="@color/black"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>
                    <EditText
                        android:id="@+id/addInfoInput"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:layout_marginHorizontal="20dp"
                        android:windowSoftInputMode="stateVisible|adjustResize"/>

                </TableRow>
                <TableRow>
                    <Button
                        android:layout_weight="1"
                        android:id="@+id/upload_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginVertical="20dp"
                        android:backgroundTint="#FF00A300"
                        android:checkable="false"
                        android:ems="10"
                        android:inputType="textMultiLine"
                        android:text="@string/upload_text"
                        android:textSize="34sp"
                        android:textStyle="bold"
                        android:visibility="visible"/>
                </TableRow>
            </TableLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>